# meublog

./: .gitignore  CNAME  Makefile  README.md  archives.html  categories.html  deploy.sh  index.html  main.py  pelicanconf.py  publishconf.py  pyproject.toml  requirements.txt  tasks.py
author/: ana-paula-sales.html
category/: dev.html  dicas-dev.html  entendendo-algoritmos.html
content/: 01.md  01_en.md  02.md  02_en.md  03.md  03_en.md  04.md  04_en.md  05.md  05_en.md  06.md  06_en.md  07.md  07_en.md  quarto_post.md  quinto_post.md  segundo_post.md  sexto_post.md
content/pages/: contato.md  posts.md  sobre.md
content/pages/en/: about.md  contact.md  reading.md
en/: archives.html  categories.html  index.html
en/author/: ana-paula-sales.html
en/category/: dev-tips.html  dev.html
en/feeds/: all.atom.xml
en/pages/: sugestoes-de-leitura.html
feeds/: all.atom.xml  all.rss.xml  dev.atom.xml  dicas-dev.atom.xml  entendendo-algoritmos.atom.xml  entendendo-algoritmos.rss.xml
output/: archives.html  categories.html  index.html
output/author/: ana-paula-sales.html
output/category/: dev.html  dicas-dev.html  entendendo-algoritmos.html
output/en/: archives.html  categories.html  index.html
output/feeds/: all.atom.xml  all.rss.xml  dev.atom.xml  dev.rss.xml  dicas-dev.rss.xml  entendendo-algoritmos.atom.xml  entendendo-algoritmos.rss.xml
output/pages/: contato.html  quem-sou-eu.html  sugestoes-de-leitura.html
pages/: contato.html  posts-principais.html  quem-sou-eu.html  sugestoes-de-leitura.html
static/: custom.css
theme/css/: main.css
(+50 files in other folders)
