[project]
name = "meublog"
description = "Blog pessoal feito com Pelican"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"


dependencies = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "pelican[markdown]>=4.11.0",
    "smartypants>=2.0.2",
    "typogrify>=2.1.0",
]

